--- a/outdoor_adventures.html
+++ b/outdoor_adventures.html
@@ -3,20 +3,37 @@
 <head>
   <meta charset="utf-8">
   <title>Outdoor Adventures</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <nav class="navBar">
     <ul>
+      <li><img src=""></li>
       <li><a href="#home">Home</a></li>
-      <li><a href="#categories">Categories</a></li>
+      <li><div class="dropdown">
+  <button class="btn btn-secondary" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Categories
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Hiking</a>
+    <a class="dropdown-item" href="#">Camping</a>
+    <a class="dropdown-item" href="#">Fishing</a>
+    <a class="dropdown-item" href="#">Climbing</a>
+  </div>
+</div></li>
+
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="contact.html">Contact</a></li>
+
     </ul>
   </nav>
 
-  <article class="mainHeading">
+  <article class="mainHeading" id="mainHeading">
     <h1>Welcome to Outdoor adventures!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </article>
@@ -28,64 +45,82 @@
     <a href=""><figure><img src="images/hiking4.jpg"><figcaption>Rock-climbing</figcaption></figure></a>
   </section>
 
-  <section class="hikingSection">
-    <h1>Hiking</h1>
-    <figure>
-      <figcaption>1 – Lion's Head Full Moon Hike
-        Distance: 5km
-        Time: 3 hours
-        Walk up the jeep track and begin to work clockwise around the mountain where you will spot Silver trees, rock kestrels and, after a slight rise, views of Table View, Robben Island and Signal Hill. Navigate the lower contour path to the summit over secure rock scrambles, chains and ladders. Visitors often take a picnic and a bottle of wine to the summit and enjoy spectacular views of the sunset and full moon. Read more about the Full Moon Hikewo routes
-        Difficulty: Moderate</figcaption>
-        <img src="images/hiking1.jpg" alt="">
-      </figure>
+
+<section class="activities">
+
+    <section class="hikingSection">
+      <article class="mainHeading">
+        <h1>Hiking</h1>
+        <p>People of all ages enjoy hiking because it strengthens friendships, allows you to get closer Cape Town's diverse natural environment and offers an escape from the daily grind. On your doorstep there may well be more walking and hiking routes than in any other place in the world from tough hikes to Sunday afternoon strolls and from seaside walks to urban adventures. Grab your hiking boots, a bottle of water and the rest of the family to embark on a cheap and healthy hike in Cape Town and Surrounds.</p>
+      </article>
+
+<section class="subsection">
+
 
       <figure>
-        <figcaption>2 – Table Mountain: Skeleton Gorge to Maclears Beacon
-          Distance: 4km
-          Time: 2-4 hours
-          From the intersection of Skeleton Gorge and the Contour Path climb up the rocky steps and ladders of the Smuts Track which are shaded by Afromontaine Forest. After Breakfast Rock the path levels out towards Maclears Beacon and affords panoramic views of the Hottentots Holland Mountains. You'll pass three minor rock scrambles before you reach your final destination. </figcaption>
-          <img src="images/hiking2.jpg" alt="">
+
+          <img src="images/hiking1.jpg" alt="">
+          <figcaption>1 – Lion's Head Full Moon Hike
+            Distance: 5km
+            Time: 3 hours
+            Walk up the jeep track and begin to work clockwise around the mountain where you will spot Silver trees, rock kestrels and, after a slight rise, views of Table View, Robben Island and Signal Hill. Navigate the lower contour path to the summit over secure rock scrambles, chains and ladders. Visitors often take a picnic and a bottle of wine to the summit and enjoy spectacular views of the sunset and full moon. Read more about the Full Moon Hikewo routes
+            Difficulty: Moderate</figcaption>
         </figure>
 
+
         <figure>
-          <figcaption>3 – Chapman's Peak
+
+            <img src="images/hiking2.jpg" alt="">
+            <figcaption>2 – Table Mountain: Skeleton Gorge to Maclears Beacon
+              Distance: 4km
+              Time: 2-4 hours
+              From the intersection of Skeleton Gorge and the Contour Path climb up the rocky steps and ladders of the Smuts Track which are shaded by Afromontaine Forest. After Breakfast Rock the path levels out towards Maclears Beacon and affords panoramic views of the Hottentots Holland Mountains. You'll pass three minor rock scrambles before you reach your final destination. </figcaption>
+          </figure>
+
+          <figure>
+
+  <img src="images/hiking3.jpg" alt="">
+  <figcaption>3 – Chapman's Peak
 Distance: 6km
 Time: 3 hours
 Start 700m before the major lookout point at the drives highest point and after a 30 minute hike you'll arrive at a crossroads on the plateau between Noordhoek Peak and Chapman's Peak. Turn right and head along Lower Chapman's Peak, round the corner to Chapman's Peak proper, cross the small saddle and begin the final ascent and scramble to the peak. You'll see Hout Bay, Karbonkelberg and the Noordhoek Amphitheatre.</figcaption>
-<img src="images/hiking3.jpg" alt="">
-        </figure>
+          </figure>
 
-        <figure>
-          <figcaption>4 – Cape Point
+          <figure>
+
+  <img src="images/hiking4.jpg" alt="">
+  <figcaption>4 – Cape Point
 Distance: 4km
 Time: 2-3 hours
 Take the south east path from Rooikrans through high bush which later descends in long steep zig zags before it reaches broad rocky ledges. If you decide to fish you might catch snoek and yellowtail and on your return journey you should look out for the Diaz Cross Replica and animals including zebras and rheboks. Make a day of it with a ride on Cape Point's Flying Dutchman
 
 </figcaption>
-<img src="images/hiking4.jpg" alt="">
-        </figure>
+          </figure>
 
-        <figure>
-          <figcaption>5 – Kirstenbosch to Constantia Nek
-Distance: 6km
-Time: 4 hours
-Your walk begins with magnificent views of Kirstenbosch and the southern peninsula at the start of the Smuts Track which is an initial gravel path which later turns right into the forest. Take the second jeep track and follow signs for Newlands Forest to the intersection of the Contour Path and Skeleton Gorge. Follow the sign for Nursery Ravine through mountain fynbos before the path widens to become a jeep track through Cecilia Forest after the second intersection. At the stone wall take the upper track and walk straight ahead until you arrive at the forest entrance.</figcaption>
-          <img src="images/hiking5.jpg" alt="">
-        </figure>
-      </section>
+          <figure>
+
+            <img src="images/hiking5.jpg" alt="">
+            <figcaption>5 – Kirstenbosch to Constantia Nek
+  Distance: 6km
+  Time: 4 hours
+  Your walk begins with magnificent views of Kirstenbosch and the southern peninsula at the start of the Smuts Track which is an initial gravel path which later turns right into the forest. Take the second jeep track and follow signs for Newlands Forest to the intersection of the Contour Path and Skeleton Gorge. Follow the sign for Nursery Ravine through mountain fynbos before the path widens to become a jeep track through Cecilia Forest after the second intersection. At the stone wall take the upper track and walk straight ahead until you arrive at the forest entrance.</figcaption>
+          </figure>
+          </section>
+        </section>
 
 
-      <section class="campingSection">
+        <section class="campingSection">
 
-      </section>
+        </section>
 
-      <section class="fishingSection">
+        <section class="fishingSection">
 
-      </section>
+        </section>
 
-      <section class="climbingSection">
+        <section class="climbingSection">
 
-      </section>
+        </section>
+</section>
 
 <footer>Created by Ridhaa Cupido</footer>
     </body>
