--- a/outdoor_adventures.html
+++ b/outdoor_adventures.html
@@ -109,12 +109,108 @@ Take the south east path from Rooikrans through high bush which later descends i
         </section>
 
 
-        <section class="campingSection">
 
+
+        <section class="campingSection">
+          <article class="mainHeading">
+            <h1>Camping</h1>
+            <p>It’s tent-pitching season. Here are some awesome spots to do it in the Cape.
+
+Whether you’re looking for back-to-basics beauty, a fun family getaway, or a romantic retreat, we’ve got you covered with our picks of campsites in the Cape. As always, if we’ve left any of your favourites out, please let us know in the comments…</p>
+          </article>
+
+        <section class="subsection">
+
+
+          <figure>
+
+              <img src="images/camping1.jpg" alt="">
+              <figcaption>1- Secret Falls Roughly 100 kilometres from Cape Town lies this tranquil campsite tucked in the Winterhoek Mountains. Here, there’s no shortage of peace, quiet and spectacular views.
+              This campsite has it’s own private spring-water swimming pool, so there’s loads of dipping to be had. Expect an abundance of fynbos, hiking trails, waterfalls and rockpools. And if you’re adventurous enough, go ziplining in nearby Ceres.</figcaption>
+            </figure>
+
+
+            <figure>
+
+                <img src="images/camping2.jpg" alt="">
+                <figcaption>2- Berverlac Tucked away in the Groot Winterhoek Mountains above Porterville, this charming no-fuss campsite epitomises the great outdoors in all its rugged majesty.
+                Enjoy a wide variety of dog-friendly hiking trails up the Groot Winterhoek Mountains followed by a dip in one of the rockpools and waterfalls. You might even stumble upon some of the area’s famed rock art. There are also some great mountain-biking trails for  intrepid travellers.  </figcaption>
+              </figure>
+
+              <figure>
+
+        <img src="images/camping3.jpg" alt="">
+        <figcaption>3 –  DRIEHOEK GUEST FARM
+          A working farm set among the mountains and rivers of the Cederberg. The region provides the ultimate escape from city life and, while the farm is a treasure in its own right, it also serves as a perfect base for exploring what is one of the country’s most hauntingly beautiful landscapes.Explore the Cederberg on one of the farm’s many walking trails, passing by rock formations, waterfalls and natural pools where you can enjoy a refreshing dip. Hardier types will want to test their stamina on some of the hiking trails that run throughout the surrounding mountains, while kids will enjoy hanging out with Driehoek’s assortment of amicable farm animals.</figcaption>
+              </figure>
+
+              <figure>
+
+        <img src="images/camping4.jpg" alt="">
+        <figcaption>4 – BONTEBOK NATIONAL PARK
+      Located on the banks of the Breede River near Swellendam, the Elsie’s Kraal rest camp offers stunning views of the river and the Langeberg Mountains. Under the majestic backdrop of the Langeberg Mountains, visitors can enjoy swimming, river-rafting, fishing, bird-watching, and mountain hiking trails. With a maximum of six people per camping site, friends and family can enjoy picnics and braais in good company.
+
+        </figcaption>
+              </figure>
+
+              <figure>
+
+                <img src="images/camping5.jpg" alt="">
+                <figcaption>5 – THE BATHS NATURAL HOT SPRINGS RESORT
+      Just outside Citrusdal in the scenic Olifants River Valley, this rustic resort dating back to 1739 provides campers with the ultimate relaxing escape. Enjoy the various hiking trails with views of Olifants River Valley, explore the town or chill at the campsite where there is a small onsite playground for children, a trampoline and tennis court. With natural hot springs, this campsite is all about relaxed outdoor living. </figcaption>
+              </figure>
+              </section>
         </section>
 
         <section class="fishingSection">
+          <h1>Fishing</h1>
+          <p>Fishing is a relaxing and enjoyable activity and can be an opportunity to teach children about nature.  Bring the whole family and enjoy a braai or picnic. Here are a few child-friendly catch and release fishing spots in Cape Town, each offers fishing and loads of other activities and fun things to do.</p>
+        </article>
 
+        <section class="subsection">
+
+
+          <figure>
+
+              <img src="images/fishing1.jpg" alt="">
+              <figcaption>1- La Lancha can be found on The Klein Bottelary Farm on Bottelary Road in Cape Town. Bring the family and enjoy the Cape Winelands with a picnic and some fishing, they also have braai facilities on request. The Fischer Haven Dam is famous for its Bass fishing and there are a few good places to fish along the dam including some jetties. Children are welcome to come along and fish as long as they are supervised.
+
+There is a small fee to fish for the day or you can join their membership and come and enjoy the fishing on a regular basis. La Lancha also offers great entertainment including, drumming, fire dancing, outdoor movies and a number of local music and theatre productions. Their family restaurant offers great food and the facilities can be hired for functions.
+
+</figcaption>
+            </figure>
+
+
+            <figure>
+
+                <img src="images/camping2.jpg" alt="">
+                <figcaption>2- Berverlac Tucked away in the Groot Winterhoek Mountains above Porterville, this charming no-fuss campsite epitomises the great outdoors in all its rugged majesty.
+                Enjoy a wide variety of dog-friendly hiking trails up the Groot Winterhoek Mountains followed by a dip in one of the rockpools and waterfalls. You might even stumble upon some of the area’s famed rock art. There are also some great mountain-biking trails for  intrepid travellers.  </figcaption>
+              </figure>
+
+              <figure>
+
+        <img src="images/camping3.jpg" alt="">
+        <figcaption>3 –  DRIEHOEK GUEST FARM
+          A working farm set among the mountains and rivers of the Cederberg. The region provides the ultimate escape from city life and, while the farm is a treasure in its own right, it also serves as a perfect base for exploring what is one of the country’s most hauntingly beautiful landscapes.Explore the Cederberg on one of the farm’s many walking trails, passing by rock formations, waterfalls and natural pools where you can enjoy a refreshing dip. Hardier types will want to test their stamina on some of the hiking trails that run throughout the surrounding mountains, while kids will enjoy hanging out with Driehoek’s assortment of amicable farm animals.</figcaption>
+              </figure>
+
+              <figure>
+
+        <img src="images/camping4.jpg" alt="">
+        <figcaption>4 – BONTEBOK NATIONAL PARK
+      Located on the banks of the Breede River near Swellendam, the Elsie’s Kraal rest camp offers stunning views of the river and the Langeberg Mountains. Under the majestic backdrop of the Langeberg Mountains, visitors can enjoy swimming, river-rafting, fishing, bird-watching, and mountain hiking trails. With a maximum of six people per camping site, friends and family can enjoy picnics and braais in good company.
+
+        </figcaption>
+              </figure>
+
+              <figure>
+
+                <img src="images/hiking5.jpg" alt="">
+                <figcaption>5 – THE BATHS NATURAL HOT SPRINGS RESORT
+      Just outside Citrusdal in the scenic Olifants River Valley, this rustic resort dating back to 1739 provides campers with the ultimate relaxing escape. Enjoy the various hiking trails with views of Olifants River Valley, explore the town or chill at the campsite where there is a small onsite playground for children, a trampoline and tennis court. With natural hot springs, this campsite is all about relaxed outdoor living. </figcaption>
+              </figure>
+              </section>
         </section>
 
         <section class="climbingSection">
