Changed entire layout. Is now fully responsive. About 50% complete

--- a/gallery.html
+++ b/gallery.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Gallery Page</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/Gallery.css">
   </head>
   <body>
+    <h1>Gallery</h1>
+    <figure><a href="images/hiking1.jpg"><img src="images/hiking1.jpg" ></a><figcaption>Lions head</figcaption></figure>
+
+    <figure><a href="images/hiking1.jpg"><img src="images/hiking1.jpg" ></a><figcaption>Picture1</figcaption></figure>
+
+    <figure><a href="images/camping1.jpg"><img src="images/camping1.jpg" width="150px"></a><figcaption>Picture1</figcaption></figure>
+
+<figure><a href="images/camping1.jpg"><img src="images/camping1.jpg" width="150px"></a><figcaption>Picture1</figcaption></figure>
+<figure><a href="images/camping1.jpg"><img src="images/camping1.jpg" width="150px"></a><figcaption>Picture1</figcaption></figure>
+<figure><a href="images/camping1.jpg"><img src="images/camping1.jpg" width="150px"></a><figcaption>Picture1</figcaption></figure>
 
   </body>
 </html>
