Updated contact form to have links, gave it a bg.

--- a/Contact.html
+++ b/Contact.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/Contact.css">
   </head>
   <body>
-    <h1>Contact</h1>
+    <h1>
+      <button id="home" type="button" name="button"><a href="outdoor_adventures.html">Home</a></button>
+      Contact
+  <button id="gallery" type="button" name="button"><a href="gallery.html">Gallery</a></button>
+    </h1>
     <form class="contactForm" action="" method="post">
       <input type="text" name="" value="" id="name" placeholder="Enter name...">
       <input type="text" name="" value="" id="surname" placeholder="Enter surname...">
@@ -25,7 +29,7 @@
 
       <textarea name="name" rows="8" cols="60" placeholder="Comments? Drop them here..." id="comments"></textarea>
 
-      <button type="button" name="button" id="submit">Submit</button>
+      <button type="submit" name="button" id="submit">Submit</button>
     </form>
 
   </body>
