Still a few bugs. Dropdown for desktop mode. OVerall margins and padding. Code quality. Can add something else

--- a/gallery.html
+++ b/gallery.html
@@ -10,13 +10,41 @@
     <h1>Gallery</h1>
     <figure><a href="images/hiking1.jpg"><img src="images/hiking1.jpg" ></a><figcaption>Lions head</figcaption></figure>
 
-    <figure><a href="images/hiking1.jpg"><img src="images/hiking1.jpg" ></a><figcaption>Picture1</figcaption></figure>
+    <figure><a href="images/hiking2.jpg"><img src="images/hiking2.jpg" ></a><figcaption>Table Mountain</figcaption></figure>
 
-    <figure><a href="images/camping1.jpg"><img src="images/camping1.jpg" width="150px"></a><figcaption>Picture1</figcaption></figure>
+    <figure><a href="images/hiking3.jpg"><img src="images/hiking3.jpg" width="150px"></a><figcaption>Chapmans Peak</figcaption></figure>
 
-<figure><a href="images/camping1.jpg"><img src="images/camping1.jpg" width="150px"></a><figcaption>Picture1</figcaption></figure>
-<figure><a href="images/camping1.jpg"><img src="images/camping1.jpg" width="150px"></a><figcaption>Picture1</figcaption></figure>
-<figure><a href="images/camping1.jpg"><img src="images/camping1.jpg" width="150px"></a><figcaption>Picture1</figcaption></figure>
+<figure><a href="images/hiking4.jpg"><img src="images/hiking4.jpg" width="150px"></a><figcaption>Cape Point</figcaption></figure>
+
+<figure><a href="images/hiking5.jpg"><img src="images/hiking5.jpg" width="150px"></a><figcaption>Kirstenbosch</figcaption></figure>
+
+
+<!-- fdasfd -->
+<figure><a href="images/camping1.jpg"><img src="images/camping1.jpg" width="150px"></a><figcaption>Secret fall</figcaption></figure>
+
+<figure><a href="images/camping2.jpg"><img src="images/camping2.jpg" width="150px"></a><figcaption>Beverlac</figcaption></figure>
+
+<figure><a href="images/camping3.jpg"><img src="images/camping3.jpg" width="150px"></a><figcaption>Driehoek Guest Farm</figcaption></figure>
+
+<figure><a href="images/camping4.jpg"><img src="images/camping4.jpg" width="150px"></a><figcaption>Bondebok National Park</figcaption></figure>
+
+<figure><a href="images/camping5.jpg"><img src="images/camping5.jpg" width="150px"></a><figcaption>Baths National Resort</figcaption></figure>
+
+
+<!-- aff -->
+<figure><a href="images/fishing1.jpg"><img src="images/fishing1.jpg" width="150px"></a><figcaption>La Lancha</figcaption></figure>
+
+<figure><a href="images/fishing2.jpg"><img src="images/fishing2.jpg" width="150px"></a><figcaption>Steam X fly-fishing</figcaption></figure>
+
+<figure><a href="images/fishing3.jpg"><img src="images/fishing3.jpg" width="150px"></a><figcaption>Awesome Charters</figcaption></figure>
+
+<figure><a href="images/fishing4.jpg"><img src="images/fishing4.jpg" width="150px"></a><figcaption>Witsrand</figcaption></figure>
+
+<figure><a href="images/fishing5.jpg"><img src="images/fishing5.jpg" width="150px"></a><figcaption>La Lancha</figcaption></figure>
+
+<!-- Rock climbing -->
+<figure><a href="images/climbing1.jpg"><img src="images/climbing1.jpg" width="150px"></a><figcaption>Langebaan</figcaption></figure>
+
 
   </body>
 </html>
