--- a/outdoor_adventures.html
+++ b/outdoor_adventures.html
@@ -30,10 +30,10 @@ and open the template in the editor.
           <button class="dropbtn" onclick="dropsDown()">Categories
           </button>
           <div class="dropdown-content" id="myDropdown">
-            <a href="#">Hiking</a>
-            <a href="#">Camping</a>
-            <a href="#">Fishing</a>
-            <a href="#">Rock-climbing</a>
+            <a href="#hiking">Hiking</a>
+            <a href="#camping">Camping</a>
+            <a href="#fishing">Fishing</a>
+            <a href="#climbing">Rock-climbing</a>
           </div>
           <div>
           </li>
