--- a/outdoor_adventures.html
+++ b/outdoor_adventures.html
@@ -12,7 +12,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <article class="mainArticle">
+        <article class="mainArticle" id="home">
             <h1>Welcome to Outdoor Adventures</h1>
             <p>
                 Camping? Hiking? Fishing? Rock-climbing? We have you covered.
@@ -25,7 +25,7 @@ and open the template in the editor.
             <nav class="navBar">
                 <ul>
                     <li></li>
-                    <li><a href="">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                   <li>  <div class="dropdown">
           <button class="dropbtn" onclick="dropsDown()">Categories
           </button>
@@ -39,8 +39,8 @@ and open the template in the editor.
           </li>
 
           <script src="js/dropdown.js"></script>
-                    <li><a href="">Gallery</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="Contact.html">Contact</a></li>
                 </ul>
             </nav>
 
@@ -49,9 +49,10 @@ and open the template in the editor.
 
             <section class="activityLinks">
               <a href="#hiking"><figure><img src="images/hiking1.jpg" width="100%"><figcaption></figcaption></figure>Hiking  </a>
-                <figure><img src="images/camping1.jpg" width="100%"><figcaption><a href="#camping">Camping</a></figcaption></figure>
-                <figure><img src="images/fishing1.jpg" width="100%"><figcaption><a href="#fishing">Fishing</a></figcaption></figure>
-                <figure><img src="images/climbing1.jpg" width="100%"><figcaption><a href="#climbing">Rock-climbing</a></figcaption></figure>
+              <a href="#camping">  <figure><img src="images/camping3.jpg" width="100%" ><figcaption ></figcaption></figure>Camping</a>
+              <a href="#fishing"><figure><img src="images/fishing2.jpg" width="100%">  <figure><figcaption></figcaption></figure>Fishing</a>
+              </a>
+              <a href="#climbing">  <figure><img src="images/climbing1.jpg" width="100%"><figcaption></figcaption></figure>Rock-climbing</a>
             </section>
 
             <section class="hikingSection" id="hiking">
@@ -242,44 +243,50 @@ The Cape is full of mountains and provides a mecca of climbing. Cape Town being 
 <section class="subsection">
   <figure>
 
-      <img src="images/fishing1.jpg" alt="">
-      <figcaption>1- La Lancha can be found on The Klein Bottelary Farm on Bottelary Road in Cape Town. Bring the family and enjoy the Cape Winelands with a picnic and some fishing, they also have braai facilities on request. The Fischer Haven Dam is famous for its Bass fishing and there are a few good places to fish along the dam including some jetties. Children are welcome to come along and fish as long as they are supervised.
+      <img src="images/climbing1.jpg" alt="">
+      <figcaption>1 -
+SA Climbing Academy
 
-  There is a small fee to fish for the day or you can join their membership and come and enjoy the fishing on a regular basis. La Lancha also offers great entertainment including, drumming, fire dancing, outdoor movies and a number of local music and theatre productions. Their family restaurant offers great food and the facilities can be hired for functions.
 
+There is nothing that boosts self-confidence, focus and concentration, support and trust, pre-planning skills and fitness more than Rock Climbing! The South African Climbing Academy offers training courses for school learners and adults wanting to learn about rock climbing and bouldering, as well as being a training facility for rock climbers.
+
+Our wall was designed by Andrew Pedley, a top South African climber. The simple angled design opens many options for specialised training such as power endurance. The training walls are angled at 15º, 30º, 45 º, 90 º, and are 4.8m in height (In accordance with the IFSC standard for bouldering) but climbing for junior and beginner climbers is only to the 3 m red line.
+
+The training routes are colour marked according to various difficulties (based on the Fontainebleau circuit grading system).
   </figcaption>
     </figure>
 
 
     <figure>
 
-        <img src="images/camping2.jpg" alt="">
-        <figcaption>2- Berverlac Tucked away in the Groot Winterhoek Mountains above Porterville, this charming no-fuss campsite epitomises the great outdoors in all its rugged majesty.
-        Enjoy a wide variety of dog-friendly hiking trails up the Groot Winterhoek Mountains followed by a dip in one of the rockpools and waterfalls. You might even stumble upon some of the area’s famed rock art. There are also some great mountain-biking trails for  intrepid travellers.  </figcaption>
+        <img src="images/climbing2.jpg" alt="">
+        <figcaption>2 -
+The Paarl Rock
+
+
+
+The views from Paarl Rock are nothing short of breath-taking, providing perfect backdrops for a hike or walk, and stunning photographs. At just two kilometres from the historical town of Paarl, just outside Cape Town in the Western Cape, Paarl Rock is in the heart of the world-famous Cape Winelands.
+
+Rock climbing is, naturally, a popular pastime for visitors to Paarl Rock. It is a relatively easy climb, manageable even by children that are somewhat used to exploring their surrounds. The height is impressive, and the surrounding vistas exquisite.
+
+The entire reserve around Paarl Rock is home to an array of trails, giving those who want to explore the beauty on foot plenty of opportunities to do so. The shortest of these trails is 2.5 kilometres, and the longest 10 kilometres. The climb from Paarl Rock to the top of the second rock (Bretagna Rock) should take hikers an hour each way.
+
+When in this area, visitors are also encouraged to explore the mountain biking trails, fishing opportunities and the endless variety of bird species. Picnics and braais at the foot of Paarl Rock are the perfect way to end this memorable experience. </figcaption>
       </figure>
 
       <figure>
+        <img src="images/climbing3.jpg">
+        <figcaption>3 - CityRock is Cape Town's centre for all things related to the sport of Rock Climbing. The facility at CityRock features a large top rope and lead climbing area with Introductory lessons taught numerous times every week. They also offer a large bouldering cave.
 
-  <img src="images/camping3.jpg" alt="">
-  <figcaption>3 –  DRIEHOEK GUEST FARM
-  A working farm set among the mountains and rivers of the Cederberg. The region provides the ultimate escape from city life and, while the farm is a treasure in its own right, it also serves as a perfect base for exploring what is one of the country’s most hauntingly beautiful landscapes.Explore the Cederberg on one of the farm’s many walking trails, passing by rock formations, waterfalls and natural pools where you can enjoy a refreshing dip. Hardier types will want to test their stamina on some of the hiking trails that run throughout the surrounding mountains, while kids will enjoy hanging out with Driehoek’s assortment of amicable farm animals.</figcaption>
+Children aged 5 and above love the fun and excitement of climbing. The sport of indoor climbing also makes for a great social event for kids. and adults alike.
+
+Learn the ropes! For first-time climbers, CityRock offers a special two-hour intro class. No prior climbing experience or gear is required.</figcaption>
       </figure>
 
-      <figure>
-
-  <img src="images/camping4.jpg" alt="">
-  <figcaption>4 – BONTEBOK NATIONAL PARK
-  Located on the banks of the Breede River near Swellendam, the Elsie’s Kraal rest camp offers stunning views of the river and the Langeberg Mountains. Under the majestic backdrop of the Langeberg Mountains, visitors can enjoy swimming, river-rafting, fishing, bird-watching, and mountain hiking trails. With a maximum of six people per camping site, friends and family can enjoy picnics and braais in good company.
-
-  </figcaption>
-      </figure>
-
-      <figure>
-
-        <img src="images/hiking5.jpg" alt="">
-        <figcaption>5 – THE BATHS NATURAL HOT SPRINGS RESORT
-  Just outside Citrusdal in the scenic Olifants River Valley, this rustic resort dating back to 1739 provides campers with the ultimate relaxing escape. Enjoy the various hiking trails with views of Olifants River Valley, explore the town or chill at the campsite where there is a small onsite playground for children, a trampoline and tennis court. With natural hot springs, this campsite is all about relaxed outdoor living. </figcaption>
-      </figure>
+<figure>
+  <img src="images/climbing4.jpg" alt="">
+  <figcaption>4 - Table Mountain towers more than a 1 000m above the Mother City. This is South Africa’s most recognised landmark. Greater Cape Town and its southern suburbs nestle against the bulk of the mountain range, which stretches from Signal Hill above Table Bay to Cape Point in the south.</figcaption>
+</figure>
 </section>
 
                       </section>
