Made some changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <body>
       <!-- Main intro -->
       <article class="mainArticle" id="home">
-         <h1 style="font-size:80px; padding: 20px 0">Outdoor Adventures</h1>
+         <h1 style="font-size:50px; padding: 20px 0">Outdoor Adventures©</h1>
          <p>
             Camping? Hiking? Fishing? Rock-climbing? We have you covered.
             Featured is a great guide on where to go and what to do to experience the outdoor experience in full throttle.
